--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,8 @@ email: g.mago@uva.nl
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: minimal light
-description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
-canonical: https://minimal-light-theme.yliu.me/
+keywords: gowreesh mago
+description: homepage for gowreesh mago.
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
