--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ twitter: https://x.com/GowreeshMago
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/img3.jpeg
+avatar: ./assets/img/dp.jpeg
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon.png
 
